# EML6805

./: README.md  ball_picker.sh  tracker.sh
LineFollower/: CMakeLists.txt  lineFollower_live.cpp  main.cpp
install/: local_setup.sh  setup.sh
install/ball_picker/lib/ball_picker/: ball_listener  ball_publisher  tracker
install/ball_picker/share/ball_picker/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur_bringup/share/ur_bringup/: package.sh
install/ur_calibration/share/ur_calibration/: local_setup.sh  package.sh
install/ur_controllers/share/ur_controllers/: package.sh
install/ur_dashboard_msgs/share/ur_dashboard_msgs/: local_setup.sh  package.sh
install/ur_description/share/ur_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_moveit_config/share/ur_moveit_config/: local_setup.sh  package.sh
install/ur_robot_driver/lib/ur_robot_driver/: ur_ros2_control_node
install/ur_robot_driver/share/ur_robot_driver/: package.sh
install/ur_simulation_gazebo/share/ur_simulation_gazebo/: package.bash  package.sh  package.zsh
log/: latest_build
src/ball_picker/: CMakeLists.txt  log.txt  package.xml
src/ball_picker/launch/: ball_picker_gazebo_launch.py
src/ball_picker/models/camera/: model.config  model.sdf
src/ball_picker/src/: BallTracker.cpp  BallTracker_V1.cpp  camera_allignment.cpp
src/ball_picker/urdf/: ball_picker.urdf  ur5e.urdf
(+151 files in other folders)
